Fixing Event Info Card on mobile

--- a/website_frontend/src/components/EventInfoCard/EventInfoCard.module.css
+++ b/website_frontend/src/components/EventInfoCard/EventInfoCard.module.css
@@ -38,3 +38,9 @@
 .eventItem {
     margin-bottom: 1rem;
 }
+
+@media only screen and (max-width: 768px) {
+    .eventCard {
+        padding: .5rem 2rem;
+    }
+}
